--- a/Report/references.bib
+++ b/Report/references.bib
@@ -1,23 +1,23 @@
 @article{SmartIdeasForSmartCities,
-author = {Schuurman, Dimitri and Baccarne, Bastiaan and Marez, Lieven and Mechant, Peter},
-year = {2012},
-month = {12},
-pages = {49-62},
-title = {Smart Ideas for Smart Cities: Investigating Crowdsourcing for Generating and Selecting Ideas for ICT Innovation in a City Context},
-volume = {7},
-journal = {Journal of theoretical and applied electronic commerce research},
-doi = {10.4067/S0718-18762012000300006}
+ author = {Schuurman, Dimitri and Baccarne, Bastiaan and Marez, Lieven and Mechant, Peter},
+ year = {2012},
+ month = {12},
+ pages = {49-62},
+ title = {Smart Ideas for Smart Cities: Investigating Crowdsourcing for Generating and Selecting Ideas for ICT Innovation in a City Context},
+ volume = {7},
+ journal = {Journal of theoretical and applied electronic commerce research},
+ doi = {10.4067/S0718-18762012000300006}
 }
 
 @article{CrowdPoweredSmartCities,
-author = {Wang, Jiangtao and Wang, Yasha and Zhang, Daqing and Lv, Qin and Chen, Chao},
-year = {2019},
-month = {04},
-pages = {},
-title = {Crowd-Powered Sensing and Actuation in Smart Cities: Current Issues and Future Directions},
-volume = {PP},
-journal = {IEEE Wireless Communications},
-doi = {10.1109/MWC.2019.1800030}
+ author = {Wang, Jiangtao and Wang, Yasha and Zhang, Daqing and Lv, Qin and Chen, Chao},
+ year = {2019},
+ month = {04},
+ pages = {},
+ title = {Crowd-Powered Sensing and Actuation in Smart Cities: Current Issues and Future Directions},
+ volume = {PP},
+ journal = {IEEE Wireless Communications},
+ doi = {10.1109/MWC.2019.1800030}
 }
 
 @article{zadeh,
@@ -37,111 +37,190 @@ doi = {10.1109/MWC.2019.1800030}
  acmid = {175255},
  publisher = {ACM},
  address = {New York, NY, USA},
-} 
+}
 
-@article{MakingCitiesSmarter,
-author = {Eggers, William D. and Guszcza, Jim and Greene, Michael},
-year = {2017},
-month = {01},
-pages = {},
-title = {Making cities smarter: How citizens' collective intelligence can guide better decision making},
-url = {https://www2.deloitte.com/us/en/insights/deloitte-review/issue-20/people-for-smarter-cities-collective-intelligence-decision-making.html},
-journal = {Deloitte Review 20},
+@article{EGG17,
+ author = {Eggers, William D. and Guszcza, Jim and Greene, Michael},
+ year = {2017},
+ month = {01},
+ pages = {},
+ title = {Making cities smarter: How citizens' collective intelligence can guide better decision making},
+ url = {https://www2.deloitte.com/us/en/insights/deloitte-review/issue-20/people-for-smarter-cities-collective-intelligence-decision-making.html},
+ journal = {Deloitte Review 20},
 }
 
 @article{WisdomOfStakeholders,
-author = {Aminpour, Payam and Gray, Steven and Jetter, Antonie and Introne, Joshua and Singer, Alison and Arlinghaus, Robert},
-year = {2020},
-month = {03},
-pages = {191-199},
-title = {Wisdom of stakeholder crowds in complex social-ecological systems},
-volume = {3},
-journal = {Nature Sustainability},
-doi = {10.1038/s41893-019-0467-z}
+ author = {Aminpour, Payam and Gray, Steven and Jetter, Antonie and Introne, Joshua and Singer, Alison and Arlinghaus, Robert},
+ year = {2020},
+ month = {03},
+ pages = {191-199},
+ title = {Wisdom of stakeholder crowds in complex social-ecological systems},
+ volume = {3},
+ journal = {Nature Sustainability},
+ doi = {10.1038/s41893-019-0467-z}
 }
 
 @article{CrowdSourcing,
-author = {Chowdhury, Srinjoy and Dhawan, Saniya and Agnihotri, Akshay},
-year = {2016},
-month = {05},
-pages = {360-365},
-title = {Crowd-sourcing for smart cities},
-doi = {10.1109/RTEICT.2016.7807842}
+ author = {Chowdhury, Srinjoy and Dhawan, Saniya and Agnihotri, Akshay},
+ year = {2016},
+ month = {05},
+ pages = {360-365},
+ title = {Crowd-sourcing for smart cities},
+ doi = {10.1109/RTEICT.2016.7807842}
 }
 
 @article{MobileCrowdSourcing,
-author = {Kong, Xiangjie and Liu, Xiaoteng and Jedari, Behrouz and Li, Menglin and Wan, Liangtian and Xia, Feng},
-year = {2019},
-month = {10},
-pages = {8095-8113},
-title = {Mobile Crowdsourcing in Smart Cities: Technologies, Applications, and Future Challenges},
-volume = {6},
-journal = {IEEE Internet of Things Journal},
-doi = {10.1109/JIOT.2019.2921879}
+ author = {Kong, Xiangjie and Liu, Xiaoteng and Jedari, Behrouz and Li, Menglin and Wan, Liangtian and Xia, Feng},
+ year = {2019},
+ month = {10},
+ pages = {8095-8113},
+ title = {Mobile Crowdsourcing in Smart Cities: Technologies, Applications, and Future Challenges},
+ volume = {6},
+ journal = {IEEE Internet of Things Journal},
+ doi = {10.1109/JIOT.2019.2921879}
 }
 
 @article{SmartCityJeddah,
-author = {Aljoufie, Mohammed and Tiwari, Alok},
-year = {2017},
-month = {01},
-pages = {466-482},
-title = {People’s Aspirations from Smart City Technologies: What Solutions They Have to Offer for the Crucial Challenges City of Jeddah Is Facing},
-volume = {05},
-journal = {Current Urban Studies},
-doi = {10.4236/cus.2017.54026}
+ author = {Aljoufie, Mohammed and Tiwari, Alok},
+ year = {2017},
+ month = {01},
+ pages = {466-482},
+ title = {People’s Aspirations from Smart City Technologies: What Solutions They Have to Offer for the Crucial Challenges City of Jeddah Is Facing},
+ volume = {05},
+ journal = {Current Urban Studies},
+ doi = {10.4236/cus.2017.54026}
 }
 
 @article{NextWaveOfInnovation,
-author = {Zhuhadar, Lily Popova and Thrasher, Evelyn and Marklin, Scarlett and Pablos, Patricia},
-year = {2017},
-month = {01},
-pages = {273-281},
-title = {The next wave of innovation—Review of smart cities intelligent operation systems},
-volume = {66},
-journal = {Computers in Human Behavior},
-doi = {10.1016/j.chb.2016.09.030}
+ author = {Zhuhadar, Lily Popova and Thrasher, Evelyn and Marklin, Scarlett and Pablos, Patricia},
+ year = {2017},
+ month = {01},
+ pages = {273-281},
+ title = {The next wave of innovation—Review of smart cities intelligent operation systems},
+ volume = {66},
+ journal = {Computers in Human Behavior},
+ doi = {10.1016/j.chb.2016.09.030}
 }
 
 @article{LanierWeylBlueprint,
-  title={A blueprint for a better digital society},
-  author={Lanier, Jaron and Weyl, E Glen},
-  journal={Harvard Business Review},
-  volume={26},
-  year={2018}
+ title={A blueprint for a better digital society},
+ author={Lanier, Jaron and Weyl, E Glen},
+ journal={Harvard Business Review},
+ volume={26},
+ year={2018}
+}
+
+@book{BitbyBit, 
+ address = {Princeton, NJ}, 
+ edition = {Open Review Edition}, 
+ title = {Bit by {Bit}: {Social} {Research} in the {Digital} {Age}}, 
+ publisher = {Princeton University Press}, 
+ author = {Salganik, Matthew J.}, 
+ year = {2017} 
 }
 
 @online {LanierWeylNYTOpinion,
-title = "Jaron Lanier Fixes the Internet | NYT Opinion",
-author = {The New York Times},
-year = 2019,
-month = {09},
-url = {\\ https://www.youtube.com/watch?v=Np5ri-KktNs}
+ title = "Jaron Lanier Fixes the Internet | NYT Opinion",
+ author = {The New York Times},
+ year = 2019,
+ month = {09},
+ url = {\\ https://www.youtube.com/watch?v=Np5ri-KktNs}
 }
 
 @online {NokiaWisdomOfTheCrowds,
-title = "Use wisdom of crowds to design smarter cities, businesses and networks",
-author = "Malla Poikela",
-year = 2018,
-month = {05},
-url = "\\ https://www.nokia.com/blog/use-wisdom-crowds-design-smarter-cities-businesses-and-networks/"
+ title = "Use wisdom of crowds to design smarter cities, businesses and networks",
+ author = "Malla Poikela",
+ year = 2018,
+ month = {05},
+ url = "\\ https://www.nokia.com/blog/use-wisdom-crowds-design-smarter-cities-businesses-and-networks/"
 }
 
 @online {NokiaAVACrowdAnalytics,
-title = "Nokia Ava Crowd Analytics",
-author = "NOKIA",
-url = {\\ https://www.nokia.com/networks/services/nokia-ava-crowd-analytics/, \\ https://www.nokia.com/networks/portfolio/insights-and-analytics/}
+ title = "Nokia Ava Crowd Analytics",
+ author = "NOKIA",
+ url = {\\ https://www.nokia.com/networks/services/nokia-ava-crowd-analytics/, \\ https://www.nokia.com/networks/portfolio/ insights-and-analytics/}
 }
 
 @online {EnforcementTracker,
-shorthand = "ENFT",
-title = "Enforcement Tracker",
-url = {https://www.enforcementtracker.com/}
+ shorthand = "ENFT",
+ title = "Enforcement Tracker",
+ url = {https://www.enforcementtracker.com/}
 }
 
 @online{EUdataregulations2018,
-	shorthand = "GDPR",
-    title = {2018 reform of EU data protection rules},
-    url = {https://gdpr-info.eu/},
-    author = {European Commission},
-    date = {2018-05-25}
+ shorthand = "GDPR",
+ title = {2018 reform of EU data protection rules},
+ url = {https://gdpr-info.eu/},
+ author = {European Commission},
+ date = {2018-05-25}
+}
+
+@online{BeyondOpenData,
+ title = "Beyond Transparency (Part IV, Chapter 15: Beyond Open Data: The Data-Driven City)",
+ author = "Michael Flowers",
+ url = {\\ https://beyondtransparency.org/chapters/part-4/beyond-open-data-the-data-driven-city/},
+ date = {2013-10-16}
+}
+
+@online{PredictiveDataAnalytics,
+ title = "Predictive data analytics is saving lives and taxpayer dollars in New York City",
+ author = "Alex Howard",
+ journal = "O`Reilly Radar",
+ url = {http://radar.oreilly.com/2012/06/predictive-data-analytics-big-data-nyc.html},
+ date = {2012-06-26}
+}
+
+@online{BigDataBigApple,
+ title = "Big data in the Big Apple",
+ author = {Viktor Sch\"onberger and Kenneth Cukier},
+ journal = "Slate",
+ url = {https://slate.com/technology/2013/03/big-data-excerpt-how-mike-flowers-revolutionized-new-yorks-building-inspections.html},
+ date = {2013-03-06}
+}
+
+@online{FDNY,
+ title = "FDNY records first month with zero fire-related deaths in department history",
+ author = "FDNY Foundation",
+ url = {https://www.fdnyfoundation.org/fdny-records-first-month-with-zero-fire-related-deaths-in-department-history/},
+ date = {2015-07-05}
+}
+
+@online{InformationSuperhighway,
+ title = "The Information Superhighway",
+ author = {Derek Prall},
+ journal = "American City \& County",
+ url = {https://www.americancityandcounty.com/2016/02/03/the-information-superhighway/},
+ date = {2016-02-03}
+}
+
+@online{YelpBoston,
+ title = "What Can Boston Restaurant Inspectors Learn from Yelp Reviews?",
+ author = {Laura Adler},
+ journal = "Government Technology",
+ url = {https://www.govtech.com/dc/articles/what-can-boston-restaurant-inspectors-learn-from-yelp-reviews.html},
+ date = {2015-05-26}
+}
+
+@online{BSL16,
+ title = "Harnessing the power of the crowd to increase capacity for data science in the social sector",
+ author = {Peter Bull and Isaac Slavitt and Greg Lipstein},
+ url = {https://arxiv.org/pdf/1606.07781.pdf},
+ date = {2016-06-24}
+}
+
+@online{Gla16,
+ shorthand = "Gla16",
+ title = "Crowdsourcing city government: Using tournaments to improve inspection accuracy",
+ author = {Edward L. Glaeser et al.},
+ url = {http://www.scottkom.com/articles/Glaeser_Hillis_Kominers_Luca_Crowdsourcing_City_Government.pdf},
+ year = {2016},
+ month = {03}
+}
+
+@online{StarhubNokia,
+ title = "Nokia and Starhub join analytics force, hopeful in creating 'effective advertising'",
+ author = "Marketing Interactive",
+ url = {https://www.marketing-interactive.com/nokia-and-starhub-join-analytics-force-hopeful-in-creating-effective-advertising},
+ journal = {Marketing Interactive},
+ date = {2018-02-26}
 }
