Korrekturlesung des GDPR Teils

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -46,12 +46,12 @@
 	\chapter{Introduction}
 	\section{Background and Motivation}
 	\startsection
-		Wisdom of the Crowd is the idea, that large collectives are supperior to individual experts in problem-solving, decision-making, innovating, and predicting \footnote{\url{https://www.investopedia.com/terms/w/wisdom-crowds.asp}}. 
+		Wisdom of the Crowd is the idea, that large collectives are supperior to individual experts in problem-solving, decision-making, innovating, and predicting\footnote{\url{https://www.investopedia.com/terms/w/wisdom-crowds.asp}}. 
 		Human Smart Cities have an enormous interest in extracting the Wisdom of the Crowd as a foundation for better decision making.
 		One suitable and broadly applied approach is crowd sourcing.
-		Since data protection regulations are in effect across the world, crowd sourcing comes at a risk: if one does not comply with the relevant regulations, sanctions might be applied.
-		This conflict is particularly topical, since the General Data Protection Regulation, referred to as GDPR, came into effect across the European Union in 2018.
-		As Figure \ref{fig:enforcement_tracker} shows, enforcement activities have started to roll in over the past year. This forces in particular European (but potentially also other) Cities to comply with the GDPR.
+		Since data protection regulations are in effect across the world, crowd sourcing comes at a risk: If one does not comply with the relevant regulations, sanctions might be applied.
+		This conflict is particularly topical, since the General Data Protection Regulation came into effect across the European Union in 2018.
+		As Figure \ref{fig:enforcement_tracker} shows, enforcement activities have started to roll in over the past year. This forces in particular European (but potentially also other) Cities to comply with GDPR.
 	\closesection
 
 	\section{Problem Statement and Research Question}
@@ -67,11 +67,11 @@
 
 
 	\chapter{General Data Protection Regulation} \chaptermark{GDPR}
-	The General Data Protection Regulation, referred to as GDPR, is in effect across the European Union from May 25, 2018.
+	The General Data Protection Regulation, referred to as GDPR, is in effect across the European Union since May 25, 2018.
 	The Regulation is directly applicable to processing of personal data in the European Union and data collected from its data subjects.
-	One central aspect of the regulation is, that it inludes a significant escalation in potential penalties (up to 4\% of the global revenue).
+	One central aspect of the regulation is that it inludes a significant escalation in potential penalties (up to 4\% of the global revenue).
 	Figure \ref{fig:enforcement_tracker} shows how enforcement activities increase from commencement until October 2021.
-	For instance, Amazon was fined 746 million \texteuro \ in July 2021 \cite{EnforcementTracker}
+	For instance, Amazon was fined 746 million \texteuro \ in July 2021 \cite{EnforcementTracker}.
 	\begin{figure}
 		\centering
 		\includegraphics{EnforcementTracker_21-10-12.PNG}
@@ -87,7 +87,7 @@
 	First of, \textbf{sensible data} is defined as personal data that is revealing race, ethnic origin, political opinions, religious or philosophical beliefs, trade union membership, health, sex life and sexual orientation, genetic data or biometric data.
 	Next, there is data relating to \textbf{criminal offences} and convictions.
 	Finally, \textbf{health data} is personal data relating to physical or mental health of an individual, including the provision of health care services, which reveal information about his or her health status.\\
-	\textbf{Pseudonymization} is the processing of personal data in such a manner that the personal data can no longer be attributed to a specific data subject without the use of additional information, provided that such additional information is kept separately and is subject to technical and organisational measures to ensure that the personal data are not attributed to an identified or identifieable natural person.
+	\textbf{Pseudonymization} is the processing of personal data in such a manner that the personal data can no longer be attributed to a specific data subject without the use of additional information, provided that such is kept separately and is subject to technical and organisational measures to ensure that the personal data is not attributed to an identified or identifieable natural person.
 	\textbf{Anonymization} eliminates personal data so that data subjects can no longer be identified. 
 	Anonymized data is excluded from GDPR altogether because anonymized data is no longer personal data.
 	\textbf{Data processing} means any operation or set of operations performed upon personal data or sets of personal data, whether or not by automated means, such as collection, recording, organisation, structuring, storage, adaptation or alternation, retrieval, consultation, use, disclosure by transmission, dissemination or otherwise making available, alignment or combination, restriction, erasure or destruction.
@@ -95,7 +95,7 @@
 
 	\section{Data Processing Entities}
 	\startsection
-	The GDPR defines different entities responsible for data processing. These entities have different responsibilites.
+	GDPR defines different entities responsible for data processing, with various responsibilites.
 	Namely there are the following:
 	\begin{enumerate}[]
 		\item The Data Controller (Art. 24 \cite{EUdataregulations2018})
@@ -106,24 +106,24 @@
 		There is a binding written agreement between the two entities. 
 		The controller must ensure the processor's compliance with GDPR.
 		\item Joint Controller (Art. 26 \cite{EUdataregulations2018}) is a Data Controller, containing multiple entities.
-		Given such a Scenario, the different entities must have an agreement on their respective responsibilites.
+		Given such a scenario, the different entities must have an agreement on their respective responsibilites.
 	\end{enumerate}
 	\closesection
 
 	\section{Data Subject Rights}
 	\startsection
-	A identified or identifiable natural person, subject to it's data being processed by a controller, is called a \textbf{data subject}.
+	An identified or identifiable natural person, subject to its data being processed by a controller, is called a \textbf{data subject}.
 	Each data subject has a set of rights under GDPR:
 	\begin{enumerate}[]
-		\item Right of access (Art. 15):
+		\item \textit{Right of access (Art. 15):} \\
 		Controllers are obligated to provide all personal information being processed about a data subject upon request of the data subject.
-		\item Right to rectification (Art. 16):
+		\item \textit{Right to rectification (Art. 16):} \\
 		Controllers are obligated to rectify or complete wrong or incomplete data given a data subjects request to do so.
-		\item Right to erasure (Art. 17):
-		One has the right to request deletion of ones personal data.
-		Generally, given such a scenario, a controller must comply with such a request and furthermore inform all processors and joint controllers to eliminate the appropriate data aswell.
+		\item \textit{Right to erasure (Art. 17):} \\
+		One has the right to request deletion of one's personal data.
+		Generally, given such a scenario, a controller must comply with such a request and furthermore inform all processors and joint controllers to eliminate the appropriate data as well.
 		Furthermore the same procedure must be executed without being requested to do so under certain circumstances.
-		For instance this applies, if the personal data is no longer necessary, the data subject has withdrawen consent or a delation is mandatory due to other laws.
+		For instance this applies, if the personal data is no longer necessary, the data subject has withdrawn consent or a deletion is mandatory due to other laws.
 		Erasure of personal data is not lawful, if higher interests are diminished, controllers must namely not comply with such requests, when
 		\begin{enumerate}
 			\item the right of freedom of expression and information would be violated
@@ -132,25 +132,25 @@
 			\item personal data is archived in public interest, used for scientific or historical research, or is used for statistical purposes
 			\item the data is used to establish, exercise or defend of legal claims
 		\end{enumerate}
-		\item Right to restriction (Art. 18):
-		In General, a data subject has the right to restrict processing of it's personal data.
-		\item Right to data portability (Art. 20)
+		\item \textit{Right to restriction (Art. 18):} \\
+		In general, a data subject has the right to restrict processing of its personal data.
+		\item \textit{Right to data portability (Art. 20):} \\
 		Controllers must provide collected data in machine and human readable format upon request, furthermore data subjects have the right to transfer the data to another controller.
-		\item Right to object (Art. 21):
-		One can object to processing of ones personal data, then controllers generally controllers are prohibited to process ones personal data.
-		\item Right not to be subject to decisions based solely on automated processing which produces legal or similarly significant effects (Art. 22)
+		\item \textit{Right to object (Art. 21):} \\
+		One can object to processing of one's personal data, then controllers are generally prohibited to process one's personal data.
+		\item \textit{Right not to be subject to decisions based solely on automated processing which produces legal or similarly significant effects (Art. 22):} \\
 		Controllers can not make decisions solely based on automatic processing, if the decisions produce a legal or similarly significant effect. 
-		However necessary decisionmakeing for a controller to get into a contract with the data subject is explicitely excluded from this right.
+		However necessary decision making for a controller to get into a contract with the data subject is explicitely excluded from this right.
 	\end{enumerate}
 	\closesection
 
 	\section{Consent and Privacy Policy}
 	\startsection
-	Processors must provide a Privacy Policy.
+	Processors must issue a privacy policy.
 	In the policy, basic information regarding processing activities must be provided in an easily understandable fashion.
-	Given a data subject reads the policy, it should afterwards be well informed about the processing activities with it's personal data.\\
+	Given a data subject reads the policy, it should afterwards be well informed about the processing activities with its personal data.\\
 	Controllers are prohibited to process personal data without the data subjects explicit consent.
-	Therefor processors must acquire the data subjects consent, however this must be achieved in a way that:
+	Therefore processors must acquire the data subjects consent, however this must be achieved in a way that:
 	\begin{enumerate}[a)]
 		\item Consent is freely given
 		\item Consent is specific
@@ -162,13 +162,13 @@
 	it can not be tied to the provision of a contract or service, if the processing is not strictly neccessary for the perfomance of such a contract or service and
 	data subject should be able to selectively consent to separate processing activities - i.e. a data subject should be able to consent to processing of performance data but reject processing of marketing data.\\
 	Due to the above regulations, contollers must manage to demonstrate data subject's consent and ensure potential withdrawal.
-	Therefor controllers should keep clear records of what a person has consented to, when and how consent was obtained i.o to be able to give evidence of consent if challenged. 
+	Therefore controllers should keep clear records of what a person has consented to, when and how consent was obtained in order to be able to give evidence of consent if challenged. 
 	In particular, controllers should store:
 	\begin{itemize}
-		\item date of consent
-		\item method of consent
-		\item who obtained consent
-		\item what information was provided to the person consenting
+		\item Date of consent
+		\item Method of consent
+		\item Who obtained consent
+		\item What information was provided to the person consenting
 	\end{itemize}
 
 
@@ -177,8 +177,8 @@
 	\section{Sanctions}
 	\startsection
 	GDPR imposes hefty fines for non compliance with the regulation.
-	It differs between two groups of violations: violations with respect to record-keeping, security, breach notifications and privacy impact assassments and violations with respect to having a legal justification for processing, complying with the rights of data subjects and cross-border data transfers.
-	The first group is subject to a maximum penalty of the highest of 10 million Euro or 2 \% of the entity's global revenue and the second group is subject to a maximum penalty of the highest of 20 million Euro or 4 \% of the entity's global revenue
+	It differs between two groups of violations: Violations with respect to record-keeping, security, breach notifications, and privacy impact assassments and violations with respect to having a legal justification for processing, complying with the rights of data subjects, and cross-border data transfers.
+	The first group is subject to a maximum penalty of the highest of 10 million Euro or 2 \% of the entity's global revenue and the second group a maximum penalty of the highest of 20 million Euro or 4 \% of the entity's global revenue, respectively.
 	\closesection
 	
 	
