Section research questions

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -54,12 +54,13 @@
 		As Figure \ref{fig:enforcement_tracker} shows, enforcement activities have started to roll in over the past year. This forces in particular European (but potentially also other) Cities to comply with GDPR.
 	\closesection
 
-	\section{Problem Statement and Research Question}
+	\section{Research Questions}
 	\startsection
-		\begin{enumerate}
-			\item What methods do exist in order to gather information from citizen?
-			\item What aspects do Human Smart Cities need to consider in order to comply with GDPR?
-		\end{enumerate}
+		This work tries to investigate how GDPR influences crowd-sourcing approaches in the context of Human Smart Cities.
+		Therefor first a literature review on existing crowd-sourcing methods is given:\\\\
+		\textbf{RQ1: What methods do exist in order to gather information from citizen?}\\\\
+		Then we investigate how these methods do (not) comply with GDPR and derive aspects to be considered when designing crowd-sourcing methods:\\\\
+		\textbf{RQ2: What aspects do Human Smart Cities need to consider in order to comply with GDPR?}\\\\
 	\closesection
 	
 	
@@ -263,7 +264,7 @@
 	\startsection
 	\closesection
 	
-	\chapter{Related Work \cite{LanierWeylBlueprint}}
+	\chapter{Conclusion}
 	\startsection
 	\closesection
 	
